2005-02-23  Adrian Aichner  <adrian@xemacs.org>

	* cmdloop.el (keyboard-quit): Remove workaround for
	`region-active-p' not making sure active region is in current
	buffer now that it does.
	* minibuf.el (minibuffer-keyboard-quit): Ditto.
	* simple.el (region-active-p): `region-active-p' to only return t
	when active region is in current buffer.

2005-02-20  Adrian Aichner  <adrian@xemacs.org>

	* replace.el (operate-on-non-matching-lines): Append matching
	lines to temp buffer to avoid prohibitive GC as a result of
	enormous string consing.
	* replace.el (operate-on-matching-lines): Ditto.

2005-02-21  Ben Wing  <ben@xemacs.org>

	* glyphs.el:
	* glyphs.el (make-image-specifier):
	* glyphs.el (glyph-property):
	* glyphs.el (convert-glyph-property-into-specifier):
	* glyphs.el (set-glyph-property):
	* glyphs.el (glyph-image):
	* glyphs.el (set-glyph-image):
	* glyphs.el (glyph-contrib-p):
	* glyphs.el (glyph-contrib-p-instance):
	* glyphs.el (set-glyph-contrib-p):
	* glyphs.el (glyph-baseline):
	* glyphs.el (set-glyph-baseline):
	* glyphs.el (make-glyph):
	Update documentation of `make-glyph' and `make-image-specifier'
	to more clearly document image instantiators and describe how
	errors are handled in make-glyph.  Also fix symbol references in
	doc strings to use `symbol' format, not 'symbol.

2005-02-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* about.el (about-xemacs):
	Compute release date from xemacs-release-date.

2005-02-19  Norbert Koch  <viteno@xemacs.org>

	* package-ui.el (pui-list-packages): The longest package name now
	has 20 characters.  Adapt the display.

2005-02-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.19 "chives" is released.

2005-02-16  Aidan Kehoe  <kehoea@parhasard.net>

	* buffer.el (pop-to-buffer):
	* window-xemacs.el (display-buffer):
	Document use of `same-window-buffer-names,' `same-window-regexps'
	by pop-to-buffer and display-buffer. 
	
2005-02-09  Ben Wing  <ben@xemacs.org>
